[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflo_bmi"
version = "0.1.0"
description = "A Python-based Ngen-BMI model for the PyFlo module."
authors = [{name = "Chad Perry"}]
maintainers = [{name = "Chad Perry"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
	"bmipy",
	"matplotlib",
	"numpy",
]

[tool.setuptools.packages.find]
where = ["."]
